--- a/login.html
+++ b/login.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello World Tab</title>
+    <title>Login Tab</title>
 </head>
 <body>
-    <h3>Hello World WebStorm & Github Re Commit</h3>
+    <h3>Login Tab</h3>
 </body>
 </html>
